--- a/data_analysis_db.ipynb
+++ b/data_analysis_db.ipynb
@@ -619,12 +619,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "59a51d99-13ab-46f6-bf88-b3b306d8a3af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "### SAVE CSV ###\n",
+    "df.to_csv('merged_data.csv', index=False)  "
    ]
   },
   {
